testdata/baselines/reference/submodule/compiler/overloadResolutionTest1.errors.txt
overloadResolutionTest1.ts(7,18): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type 'string' is not assignable to type 'boolean'.
overloadResolutionTest1.ts(18,16): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type 'string' is not assignable to type 'boolean'.
overloadResolutionTest1.ts(24,15): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type 'boolean' is not assignable to type 'string'.


==== overloadResolutionTest1.ts (3 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar };
    
    var x1 = foo([{a:true}]); // works
    var x11 = foo([{a:0}]); // works
    var x111 = foo([{a:"s"}]); // error - does not match any signature
                     ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'boolean'.
!!! related TS6500 overloadResolutionTest1.ts:2:19: The expected type comes from property 'a' which is declared here on type '{ a: boolean; }'
!!! related TS2771 overloadResolutionTest1.ts:2:10: The last overload is declared here.
!!! related TS2793 overloadResolutionTest1.ts:3:10: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
    var x1111 = foo([{a:null}]); // works - ambiguous call is resolved to be the first in the overload set so this returns a string
    
    
    
    function foo2(bar:{a:number;}):string;
    function foo2(bar:{a:boolean;}):number;
    function foo2(bar:{a:any;}):any{ return bar };
    
    var x2 = foo2({a:0}); // works
    var x3 = foo2({a:true}); // works
    var x4 = foo2({a:"s"}); // error
                   ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'boolean'.
!!! related TS6500 overloadResolutionTest1.ts:13:20: The expected type comes from property 'a' which is declared here on type '{ a: boolean; }'
!!! related TS2771 overloadResolutionTest1.ts:13:10: The last overload is declared here.
!!! related TS2793 overloadResolutionTest1.ts:14:10: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
    
    
    function foo4(bar:{a:number;}):number;
    function foo4(bar:{a:string;}):string;
    function foo4(bar:{a:any;}):any{ return bar };
    var x = foo4({a:true}); // error
                  ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type 'boolean' is not assignable to type 'string'.
!!! related TS6500 overloadResolutionTest1.ts:22:20: The expected type comes from property 'a' which is declared here on type '{ a: string; }'
!!! related TS2771 overloadResolutionTest1.ts:22:10: The last overload is declared here.
!!! related TS2793 overloadResolutionTest1.ts:23:10: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.